	* Bugfix for negative remaining distance when going backwards
	* New settings for powersaving
	* Adjustments to powersaving algorithm

0.22:
	* Powersaving disabled by default
	* Default choice for powersaving in the settings
	* Better position in elevation profiles
	* Integrating fixes in upstream rust heatshrink crate
	* Small path optimisations with brouter (removing looplets)
	* Bugfix in nearest segment detection

0.23:
	* New display algorithm : way faster, larger roads, zooming out is now ok
	* You will need to re-generate your maps because the new algorithm uses a different scale
	* Better path simplification
	* Removed sharp turns auto-detection
	* Waypoints autodetection using the map : this will generate more points than really needed but can still be effective.
	* New option: sleep between waypoints
	* Interface: centered svg preview + display file sizes
	* Interface: disable/enable waypoints detection and elevation
	* Touching the screen when sleeping will wake up but not change screen
	* Removing footways (if bicycles not allowed) to reduce resource usage
	* Switching screen will clear the screen immediately so you can know your screen touch has been received
	
0.24:
	* Fix for loading very large files (> 65kb)
	* New menu on file selection : reverse path without waiting for file to load
	* Fix for files converted from maps2gpx : path was not reduced in size correctly
	* Experimental ski mode : have a ski slopes map
	* Fix for path projection display when lost and zoomed out

0.25: Minor code improvements

0.26: Add option to plot openstmap if installed

0.27: Support for large paths (grid sizes > 65k)

0.28:
	* deduplicating openstreetmap ways (~1% file size decrease)
	* home-made polygon computation :
		- lighter openstreetmap requests 
		- gives correct results on very large path (older algorithm was sometimes
		incorrect and tiles were missing)
		- better pre-visualization on the map
	* long touch to bring up menu
	* exit button in menu