@@ -10,7 +10,6 @@
             brightness: 0.5,
             power_lcd_off: false,
             powersave_by_default: false,
-            sleep_between_waypoints: false,
         },
         require("Storage").readJSON(FILE, true) || {}
     );
@@ -88,13 +87,6 @@
             value: settings.powersave_by_default == true,
             onchange: (v) => {
                 settings.powersave_by_default = v;
-                writeSettings();
-            }
-        },
-        "sleep between waypoints": {
-            value: settings.sleep_between_waypoints == true,
-            onchange: (v) => {
-                settings.sleep_between_waypoints = v;
                 writeSettings();
             }
         }
